--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env: |
+      GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
     
     steps:
       #- uses: actions/checkout@v3
