--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,11 +16,11 @@ jobs:
         run: |
           echo $GITHUB_TOKEN
           echo $GITHUB_ACTOR
-          curl -L \
-              -X POST \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer $GITHUB_TOKEN"\
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/orgs/$GITHUB_ACTOR/repos \
-              -d '{"name":"Hello-World","description":"This is your first repository","private":true}' \
-          | echo
+          response=$(curl -L \
+                        -X POST \
+                        -H "Accept: application/vnd.github+json" \
+                        -H "Authorization: Bearer $GITHUB_TOKEN" \
+                        -H "X-GitHub-Api-Version: 2022-11-28" \
+                        -d '{"name":"Hello-World","description":"This is your first repository","private":true}' \
+                        https://api.github.com/orgs/$GITHUB_ACTOR/repos)
+          echo "$response"
