--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,17 @@
-name: 创建私有仓库
+name: 复制公共仓库为私有仓库
 
 on:
   workflow_dispatch:
+    inputs:
+      target:
+        description: '复制的公共仓库名称'
+        required: true
+        type: string
+      name:
+        description: '创建的私有仓库名称'
+        required: true
+        type: string
+      
 
 jobs:
   build:
@@ -14,13 +24,8 @@ jobs:
       #- uses: actions/checkout@v3
       - name: 运行命令
         run: |
-          echo $GITHUB_TOKEN
-          echo $GITHUB_ACTOR
-          response=$(curl -Ls \
-                        -X POST \
-                        -H "Accept: application/vnd.github+json" \
-                        -H "Authorization: Bearer $GITHUB_TOKEN"\
-                        -H "X-GitHub-Api-Version: 2022-11-28" \
-                        https://api.github.com/user/repos \
-                        -d '{"name":"Hello-World","description":"This is your first repo!","private":true}')
+          response=$(curl -Ls -X POST -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" \
+                          -H "Authorization: Bearer $GITHUB_TOKEN" \
+                          https://api.github.com/user/repos \
+                          -d '{"name":"Hello-World","description":"This is your first repo!","private":true}')
           echo "$response"
