--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,13 +19,21 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.TOKEN }}
       GITHUB_ACTOR: ${{ github.actor }}
+      TARGET: ${{ inputs.target }}
+      NAME: ${{ inputs.name }}
     
     steps:
       #- uses: actions/checkout@v3
-      - name: 运行命令
+      - name: 创建私有仓库
         run: |
-          response=$(curl -Ls -X POST -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" \
+          response=$(curl -Lsw "%{http_code}" -X POST -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" \
                           -H "Authorization: Bearer $GITHUB_TOKEN" \
                           https://api.github.com/user/repos \
-                          -d '{"name":"Hello-World","description":"This is your first repo!","private":true}')
-          echo "$response"
+                          -d '{"name":"${NAME}","description":"源自${TARGET}","private":true}')
+          code=$(echo "$response" | tail -1)
+          if [[ "$code" != "201" ]]; then echo "$response"; exit 1; fi
+          
+      - name: 失败不执行
+        if: failure()
+        run: |
+          echo "ok"
