--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,7 +39,7 @@ jobs:
         if: success()
         uses: actions/checkout@v3
         with:
-          repository: ${TARGET}
+          repository: ${{ env.TARGET }}
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
