--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,5 +49,5 @@ jobs:
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git remote set-url origin git@github.com:${GITHUB_ACTOR}/${NAME}.git
+          git remote set-url origin https://${GITHUB_TOKEN}@github.com/${GITHUB_ACTOR}/${NAME}.git
           git push -u origin $REF:master
