--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,20 +28,15 @@ jobs:
       NAME: ${{ inputs.name }}
     
     steps:
-      - name: Checkout tools repo
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          repository: ${GITHUB_ACTOR}/${NAME}
-          token: ${{ secrets.TOKEN }}
-      - name: 复制公共仓库
+      - name: 签出公共仓库
         uses: actions/checkout@v3
         with:
           repository: ${{ env.TARGET }}
           ref: ${{ env.REF }}
-      - run: |
+          
+      - name: 提交公共仓库
+        run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add .
-          git commit -m "-"
-          git push
+          git remote set-url origin https://${GITHUB_TOKEN}@github.com/${GITHUB_ACTOR}/${NAME}.git
+          git push -u origin $REF
