--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      id-token: write
+      contents: write
     env:
       GITHUB_TOKEN: ${{ secrets.TOKEN }}
       GITHUB_ACTOR: ${{ github.actor }}
