--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      id-token: write
     env:
       GITHUB_TOKEN: ${{ secrets.TOKEN }}
       GITHUB_ACTOR: ${{ github.actor }}
