--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           repository: wgp-2020/test2
           token: ${{ secrets.TOKEN }}
+          depth: 0
       - run: |
           date > generated.txt
           git config user.name github-actions
