--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,5 @@ jobs:
           
       - name: 提交公共仓库
         run: |
-          bash
-          git remote set-url origin https://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@github.com/wgp-2020/test3.git
-          git push
+          chmod +x *
+          ./copy.sh
