--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - name: 复制
         run: |
-          git -c http.followRedirects=false clone -s https://github.com/${TARGET}.git#${REF}
+          git clone https://github.com/luolongfei/freenom.git
           cd "$(echo "${TARGET}" | cut -d'/' -f2)"
           git remote set-url origin https://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@github.com/wgp-2020/test3.git
           git push
